# coq-tricks

./: .gitignore  .travis.yml  ArityDefinition.v  Coercions.v  DefEquality.v  Function.v  Instantiate.v  IntroPatterns.v  LICENSE  Learn.v  Makefile  NoInit.v  README.md  RecordFunction.v  Search.v  Sleep.v  SmallInversions.v  TypeParametersAndIndices.v  _CoqProject  coq-tricks.opam  index.md  meta.yml  tricks.md
.github/workflows/: build.yml  check-links.yml  deploy-pages.yml  docker-action.yml
Learn/: Example.v  Learn.v
src/: Bidirectional.v  Check.v  CheckEnv.v  Constructors.v  Context.v  Deex.v  DefEquality.v  DivMod.v  Function.v  HintLocality.v  InstanceGeneralization.v  Instantiate.v  LtacGallinaApplication.v  Macros.v  Modules.v  NoInit.v  NotationModule.v  Projections.v  RelationInstances.v  RewNotation.v  Search.v  Sections.v  SmallInversions.v  TacticNotationOptionalParams.v  TypeParametersAndIndices.v  UnshelveInstantiate.v  Views.v
